# Xenity-Engine

./: .gitignore  ENGINE4.txt  README.md  TODO.md  Xenity_Engine.sln  copy_engine_dll.bat
Xenity_Engine/: CMakeLists.txt  CMakeListsVita.txt  CMakeListsWindows.txt  How To Build.txt  Makefile.PS3  MakefilePS2  Xenity_Engine.sln  Xenity_Engine.vcxproj  Xenity_Engine.vcxproj.filters  build_engine.bat  build_engine2.bat  build_engine_editor.bat  build_engine_editor_school.bat  build_engine_game.bat  build_game_outdated.bat  draw_3D.vcl  editor_ui.cpp  editor_ui.h  imgui.ini  pack_engine.bat
Xenity_Engine/Source/: SceneManager.cpp  SceneManager.h  asset_manager.cpp  asset_manager.h  component.cpp  component.h  engine.cpp  engine.h  engine_settings.cpp  engine_settings.h  file.cpp  game.cpp  game.h  gameOld.cpp  gameOld.h  gameobject.cpp  gameobject.h  glad.c  main.cpp  main.h  mainps3.cpp  makefile  makefile.psp  makefile.psvita  monobehaviour.cpp  monobehaviour.h  orbital_camera.cpp  orbital_camera.h  transform.cpp  transform.h  xenity.h  xenity_editor.h
Xenity_Engine/Source/3d_scene/: gameOld.cpp  gameOld.h  orbital_camera.cpp  orbital_camera.h
Xenity_Engine/Source/audio/: audio.cpp  audio_clip.cpp  audio_clip.h
Xenity_Engine/Source/debug/: debug.cpp  debug.h  performance.cpp  performance.h
Xenity_Engine/Source/editor/: code_file.h  compiler.cpp  compiler.h  editor.cpp  editor.h  file_handler.cpp  file_handler.h  file_reference_finder.cpp  file_reference_finder.h  gizmo.cpp  gizmo.h  platform_settings.cpp  platform_settings.h  tool_mode.h  update_checker.cpp
Xenity_Engine/Source/engine/: api.h  application.cpp  application.h  component.cpp  component.h  constants.h  cpu.h  engine.cpp  engine.h  engine_args.cpp  engine_args.h  engine_settings.cpp  engine_settings.h  game_interface.h  missing_script.cpp  missing_script.h  monobehaviour.cpp  monobehaviour.h  platform.h  test_component.cpp  test_component.h
Xenity_Engine/Source/file_system/: file.cpp  file.h
Xenity_Engine/Source/game/: sceneGame1.cpp  sceneGame1.h
Xenity_Engine/Source/game_dungeon/: animated_light.cpp  animated_light.h  camera_follow.cpp  camera_follow.h  chest.cpp  chest.h  coin.cpp  coin.h  enemy.cpp  enemy.h  game.cpp  game.h  level_manager.cpp  level_manager.h  player.cpp  player.h  spike.cpp  spike.h
Xenity_Engine/Source/game_test/: fps_counter.cpp  fps_counter.h  free_move.cpp  free_move.h  game.cpp  game.h  rotate.cpp  rotate.h
Xenity_Engine/Source/graphics/: camera.cpp  camera.h  camera_projection_types.h  graphics.cpp  graphics.h  iDrawable.cpp  iDrawable.h  line_renderer.cpp  line_renderer.h  material.cpp  material.h  mesh.cpp  mesh.h  shader.cpp  shader.h  spriteRenderer.cpp  spriteRenderer.h  sprite_manager.cpp  sprite_manager.h  text_renderer.cpp  text_renderer.h  texture.cpp  texture.h  tile_map.cpp  tile_map.h
Xenity_Engine/Source/images/: Black_Roughness.pngZone.Identifier
Xenity_Engine/Source/inputs/: input_system.cpp  input_system.h
Xenity_Engine/Source/lighting/: lighting.cpp  lighting.h
Xenity_Engine/Source/models/: chess_tower.mtl  debug_cube.mtl  gas_bottle.mtl
Xenity_Engine/Source/pathfinding/: astar.cpp  astar.h  dijkstras.cpp  dijkstras.h  pathfinding.cpp  pathfinding.h
Xenity_Engine/Source/pathfinding_test/: pathfinding.cpp  pathfinding.h
Xenity_Engine/Source/ps2/: cpu.cpp
Xenity_Engine/Source/ps3/: cpu.cpp
Xenity_Engine/Source/psp/: callbacks.cpp  callbacks.h  cpu.cpp  gu2gl.h
Xenity_Engine/Source/psvita/: cpu.cpp
Xenity_Engine/Source/rendering_test/: rendering_test_2d.cpp  rendering_test_2d.h
Xenity_Engine/Source/rts_game/: build_manager.cpp  build_manager.h  building.cpp  building.h  building_data.cpp  building_data.h  building_type.h  game.h  (+21 more)
Xenity_Engine/assets/: Dust2Scene.xen  Dust2SceneCam.xen  Models.xen  boo.PNGZone.Identifier
Xenity_Engine/icons/: code.psd
Xenity_Engine/include/: stb_image_write.h
Xenity_Engine/libs/: libSDL3.so.0.1.2  libassimp.so.5.4.3
Xenity_Engine/shaders/: diffuse_specular_shader.fcg  fragmentStandard.shader  fragmentUnlitStandard.shader  standard.shader  standardMaterial.mat  standard_psvita.shader  unlit.shader  unlit_psvita.shader  vertexStandard.shader  vertexUnlitStandard.shader
(+1079 files in other folders)
